=======================
CHANGELOG
=======================

-> 1.20
---------

Minitage.recipe.egg:

    - better errors handling
    - In particular for eggs and url, now md5 urls are preferred.
    - Also when we can't download a distribution from somewhere, we try to
      fallback to other distributions which achieve the desired requirement

Minitage.recipe.cmmi:

    - new patch selection for freebsd:
        freebsd-patches

    - Fix some double spaces left in compilation flags which broke some exotic
      system builders.

1.14
-----

    - add enrionment file generation to the scripts recipe

1.13
---------

    - cmmi buggy update methods

1.11 - 1.12
----------------

    - rescan egg direcrectories at install time because there may be new
      develop eggs or eggs installed by buildout extensions (mr.developer)
    - fix for interaction with buildout.minitagificator and
      zc.buildout.easy_install..*script


1.-1.10
---------

    - bugfix with cache and static distributions.

1.8
-------

    - make patches go in a personnal directory with some md5 mecanism to redownload them.

1.4->1.7
----------

    - x64 fixes
    - bugfix in static distribution install when you have patches to apply.

1.3
----

    - release uncomitted unittests updates

1.2
-------

    - make it compatible with zc.buildout 1.0

1.1
-----

    - md5 bug

1.0
------

    * first stable release.
    * All recipe are documented and well tested.
    * buildout.minitagificator is completed.
    * stabilized and synced with other minitage components
    * minitage.recipe:eggs has been drasticly improved in term of algorythms and speed.

0.33->0.34
-----------

    - Fix python executable computation

0.32
-----

    - Documentation and tests release

0.29
----

    - Fix bug in recipes initialization because of buildout auto-ordering


0.28
----

    - Add another hook to the cmmi recipe: post-download

0.27
-----
